force-app/main/default/objects/Quote/fields/COWO_Total_FrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_Total_FrontPurchasePrice__c</fullName>
    <label>フロント仕入価格合計</label>
    <summarizedField>QuoteLineItem.COWO_TotalFrontPurchasePrice__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>