force-app/main/default/objects/Quote/fields/COWO_Total_LocalCorporationTC__c.field-meta.xml
<CustomField>
    <fullName>COWO_Total_LocalCorporationTC__c</fullName>
    <label>現法TC合計</label>
    <summarizedField>QuoteLineItem.COWO_TotalLocalCorporationTC__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>