force-app/main/default/objects/Quote/fields/COWO_Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>COWO_Total_Tax__c</fullName>
    <formula>ROUND(COWO_Final_Amount__c  *  COWO_Tax_Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税合計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>