force-app/main/default/objects/Quote/fields/COWO_Total_TC__c.field-meta.xml
<CustomField>
    <fullName>COWO_Total_TC__c</fullName>
    <label>TC合計</label>
    <summarizedField>QuoteLineItem.COWO_TotalTC__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>