force-app/main/default/objects/Quote/fields/COWO_Transaction_Terms_Import_Export__c.field-meta.xml
<CustomField>
    <fullName>COWO_Transaction_Terms_Import_Export__c</fullName>
    <label>取引条件（輸出入）</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>