force-app/main/default/objects/Quote/fields/COWO_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>COWO_Transport_Cost__c</fullName>
    <label>運送費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>