force-app/main/default/objects/Quote/fields/COWO_Your_Ref__c.field-meta.xml
<CustomField>
    <fullName>COWO_Your_Ref__c</fullName>
    <label>Your Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>