force-app/main/default/objects/Quote/fields/CreatedAutomatically__c.field-meta.xml
<CustomField>
    <fullName>CreatedAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quote created automatically by the system when Partner Opportunity is Approved.</inlineHelpText>
    <label>Created Automatically</label>
    <type>Checkbox</type>
</CustomField>