force-app/main/default/objects/Quote/fields/Customer_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_Number__c</fullName>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先発注番号</label>
    <type>Text</type>
</CustomField>