force-app/main/default/objects/Quote/fields/Delivery_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Conditions__c</fullName>
    <defaultValue>&quot;別途打合せによる&quot;</defaultValue>
    <label>受渡条件</label>
    <length>15</length>
    <type>Text</type>
</CustomField>