force-app/main/default/objects/Quote/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <defaultValue>&quot;別途打合せによる&quot;</defaultValue>
    <label>納入期日</label>
    <length>15</length>
    <type>Text</type>
</CustomField>