force-app/main/default/objects/Quote/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <defaultValue>&quot;別途打合せによる&quot;</defaultValue>
    <label>受渡場所</label>
    <type>TextArea</type>
</CustomField>