force-app/main/default/objects/Quote/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <label>Delivery Terms</label>
    <type>TextArea</type>
</CustomField>