force-app/main/default/objects/Quote/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <inlineHelpText>If you leave the field empty, system will automatically add Delivery Time copying from Opportunity level (Lead time (weeks) field).</inlineHelpText>
    <label>Delivery Time</label>
    <type>TextArea</type>
</CustomField>