force-app/main/default/objects/Quote/fields/Detailed_Information__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Information__c</fullName>
    <label>詳細情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>