force-app/main/default/objects/Quote/fields/DiscountedValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountedValue__c</fullName>
    <description>Sum of discounted prices of quote lines.</description>
    <inlineHelpText>Sum of discounted prices of quote lines.</inlineHelpText>
    <label>Discounted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>