force-app/main/default/objects/Quote/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <label>部署名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>