force-app/main/default/objects/Quote/fields/EuCustoms__c.field-meta.xml
<CustomField>
    <fullName>EuCustoms__c</fullName>
    <formula>EUCustomsRateEditable__c * FOBPriceJapan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EU Customs = EUCustoms Rate * FOB Price Japan</inlineHelpText>
    <label>EU Customs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>