force-app/main/default/objects/Quote/fields/EuCustomsRate__c.field-meta.xml
<CustomField>
    <fullName>EuCustomsRate__c</fullName>
    <label>EU Customs Rate</label>
    <summarizedField>QuoteLineItem.EuCustomsRate__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.JapanPurchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>