force-app/main/default/objects/Quote/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>