force-app/main/default/objects/Quote/fields/FinalPriceText__c.field-meta.xml
<CustomField>
    <fullName>FinalPriceText__c</fullName>
    <defaultValue>&apos;FINAL PRICE&apos;</defaultValue>
    <label>Final price text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>