force-app/main/default/objects/Quote/fields/FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>FOB_Price__c</fullName>
    <description>FOB price for all products, excl options</description>
    <inlineHelpText>FOB price for all products, excl options</inlineHelpText>
    <label>FOB Price</label>
    <summarizedField>QuoteLineItem.CostUnitPrice__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Option</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>