force-app/main/default/objects/Quote/fields/FOBPriceJapan__c.field-meta.xml
<CustomField>
    <fullName>FOBPriceJapan__c</fullName>
    <label>FOB Price Japan</label>
    <summarizedField>QuoteLineItem.CostTotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.JapanPurchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Option</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>