force-app/main/default/objects/Quote/fields/FreeHouse_PriceHHT__c.field-meta.xml
<CustomField>
    <fullName>FreeHouse_PriceHHT__c</fullName>
    <formula>CIFPrice__c + EuCustoms__c + HandlingCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free House Price (HHT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>