force-app/main/default/objects/Quote/fields/FreeHousePrice__c.field-meta.xml
<CustomField>
    <fullName>FreeHousePrice__c</fullName>
    <formula>FOB_Price__c + OverseasFreightCostsEditable__c + BankCharges__c + EuCustoms__c + HandlingCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Free House Price = CIF Price + EU Customs + Handling Cost + Reservation</inlineHelpText>
    <label>Free House Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>