force-app/main/default/objects/Quote/fields/HHTChubuBranchStaff__c.field-meta.xml
<CustomField>
    <fullName>HHTChubuBranchStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HHT担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChubuBranchstaff</relationshipName>
    <type>Lookup</type>
</CustomField>