force-app/main/default/objects/Quote/fields/InstallationWarranty__c.field-meta.xml
<CustomField>
    <fullName>InstallationWarranty__c</fullName>
    <description>Costs for installation, training and warranty (in addition to items in the product list).</description>
    <inlineHelpText>Costs for installation, training and warranty (in addition to items in the product list).</inlineHelpText>
    <label>Installation &amp; Warranty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>