force-app/main/default/objects/Quote/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>送案No.</label>
    <type>Text</type>
</CustomField>