force-app/main/default/objects/Quote/fields/JTLReportExportCheck__c.field-meta.xml
<CustomField>
    <fullName>JTLReportExportCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JTLレポートエクスポート済み</label>
    <type>Checkbox</type>
</CustomField>