force-app/main/default/objects/Quote/fields/JTLReportExportDate__c.field-meta.xml
<CustomField>
    <fullName>JTLReportExportDate__c</fullName>
    <label>JTLエクスポート日時</label>
    <type>DateTime</type>
</CustomField>