force-app/main/default/objects/Quote/fields/JTLReportExportList__c.field-meta.xml
<CustomField>
    <fullName>JTLReportExportList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JTLレポートエクスポート計上対象</label>
    <type>Checkbox</type>
</CustomField>