force-app/main/default/objects/Quote/fields/ListValue__c.field-meta.xml
<CustomField>
    <fullName>ListValue__c</fullName>
    <description>Sum of quote lines prices.</description>
    <inlineHelpText>Sum of quote lines prices.</inlineHelpText>
    <label>List Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>