force-app/main/default/objects/Quote/fields/LocalAccessories__c.field-meta.xml
<CustomField>
    <fullName>LocalAccessories__c</fullName>
    <inlineHelpText>Cost of accessories not listed in the product list</inlineHelpText>
    <label>Local Accessories</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>