force-app/main/default/objects/Quote/fields/LocalAccessoryList__c.field-meta.xml
<CustomField>
    <fullName>LocalAccessoryList__c</fullName>
    <description>List of local accessories.</description>
    <inlineHelpText>List of local accessories (not included in the product list).</inlineHelpText>
    <label>Local accessory list</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>