force-app/main/default/objects/Quote/fields/MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>MaterialDescription__c</fullName>
    <inlineHelpText>Select the material information that should be included on the quote:</inlineHelpText>
    <label>Material Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specification</fullName>
                <default>true</default>
                <label>Specification</label>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Description and Specification</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>