force-app/main/default/objects/Quote/fields/MaxDiscount__c.field-meta.xml
<CustomField>
    <fullName>MaxDiscount__c</fullName>
    <label>Max Discount</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>