force-app/main/default/objects/Quote/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>IF(Opportunity.RecordType.DeveloperName = &apos;PartnerOpportunity&apos;, Opportunity.Owner.Contact.MobilePhone , Contact.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>