force-app/main/default/objects/Quote/fields/MoreMainProducts__c.field-meta.xml
<CustomField>
    <fullName>MoreMainProducts__c</fullName>
    <formula>IF(  NumberOfMainProducts__c  &gt; 1, 
IMAGE (&quot;/img/msg_icons/warning24.png&quot;, &quot;More than 1 Main Products&quot;), 
IMAGE (&quot;/img/msg_icons/confirm24.png&quot;, &quot;1 or less Main Product&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System will display exclamation mark icon if there is more than 1 Main Products selected to the Quote. Please verify EU Customs Rate and Overseas Freight Costs on Quote Line Item level</inlineHelpText>
    <label>More Main Products?</label>
    <type>Text</type>
</CustomField>