force-app/main/default/objects/Quote/fields/NumberOfMainProducts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMainProducts__c</fullName>
    <label>Number of Main Products</label>
    <summaryFilterItems>
        <field>QuoteLineItem.MainProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>