force-app/main/default/objects/Quote/fields/OpportunityChubuBranchStaffEmail__c.field-meta.xml
<CustomField>
    <fullName>OpportunityChubuBranchStaffEmail__c</fullName>
    <formula>Opportunity.HHTchububranch__r.Email</formula>
    <label>商談HHT担当者メールアドレス</label>
    <type>Text</type>
</CustomField>