force-app/main/default/objects/Quote/fields/OpportunityChubuBranchStaffName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityChubuBranchStaffName__c</fullName>
    <formula>Opportunity.HHTchububranch__r.LastName + &apos; &apos; + Opportunity.HHTchububranch__r.FirstName</formula>
    <label>商談HHT担当者名</label>
    <type>Text</type>
</CustomField>