force-app/main/default/objects/Quote/fields/OpportunityOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerEmail__c</fullName>
    <formula>Opportunity.Owner.Email</formula>
    <label>商談所有者メールアドレス</label>
    <type>Text</type>
</CustomField>