force-app/main/default/objects/Quote/fields/OpportunityOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerName__c</fullName>
    <formula>Opportunity.Owner.LastName + &apos; &apos; + Opportunity.Owner.FirstName</formula>
    <label>商談所有者名</label>
    <type>Text</type>
</CustomField>