force-app/main/default/objects/Quote/fields/OpportunityTEL__c.field-meta.xml
<CustomField>
    <fullName>OpportunityTEL__c</fullName>
    <formula>Opportunity.Owner.Phone</formula>
    <label>商談電話番号</label>
    <type>Text</type>
</CustomField>