force-app/main/default/objects/Quote/fields/OverseasFreightCosts__c.field-meta.xml
<CustomField>
    <fullName>OverseasFreightCosts__c</fullName>
    <label>Overseas Freight Costs</label>
    <summarizedField>QuoteLineItem.OverseasFreightCosts__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>