force-app/main/default/objects/Quote/fields/OverseasFreightCostsEditable__c.field-meta.xml
<CustomField>
    <fullName>OverseasFreightCostsEditable__c</fullName>
    <inlineHelpText>System will calculate value based on the sum of Overseas Freight Costs given on Quote Line Item level (Overseas Freight Costs field). Editable.</inlineHelpText>
    <label>Overseas Freight Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>