force-app/main/default/objects/Quote/fields/PartnerPortalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PartnerPortalOpportunity__c</fullName>
    <formula>CASE ( 
Opportunity.RecordType.DeveloperName, 
&quot;PartnerOpportunity&quot;, IMAGE (&quot;/img/msg_icons/warning24.png&quot;,&quot;!!! Partner Opportunity please verify Contact&apos;s Email Adress&quot;), &quot;Not defined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WARNING! Partner Portal Opportunity</label>
    <type>Text</type>
</CustomField>