force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&quot;別途打合せによる&quot;</defaultValue>
    <label>支払条件</label>
    <type>TextArea</type>
</CustomField>