force-app/main/default/objects/Quote/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>TotalCustomerPrice__c - CostPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>