force-app/main/default/objects/Quote/fields/ProfitPercent__c.field-meta.xml
<CustomField>
    <fullName>ProfitPercent__c</fullName>
    <formula>Profit__c / TotalCustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>