force-app/main/default/objects/Quote/fields/QuoteFileName__c.field-meta.xml
<CustomField>
    <fullName>QuoteFileName__c</fullName>
    <description>「見積番号_案件名」</description>
    <formula>QuoteNumber  + &quot;_&quot; +  Opportunity.Name</formula>
    <label>見積書ファイル名</label>
    <type>Text</type>
</CustomField>