force-app/main/default/objects/Quote/fields/QuoteValidity__c.field-meta.xml
<CustomField>
    <fullName>QuoteValidity__c</fullName>
    <defaultValue>Today() + 90</defaultValue>
    <label>Quote Validity</label>
    <type>Date</type>
</CustomField>