force-app/main/default/objects/Quote/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <label>Reservation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>