force-app/main/default/objects/Quote/fields/Sign_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Image_URL__c</fullName>
    <description>「出力署名」によって出力する署名画像のファイル名をここで作成。</description>
    <formula>&quot;JTL_&quot; +   TEXT( Company_Information__c )  + &quot;署名.jpg&quot;</formula>
    <label>署名画像URL</label>
    <type>Text</type>
</CustomField>