force-app/main/default/objects/Quote/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>