force-app/main/default/objects/Quote/fields/SignatureContext__c.field-meta.xml
<CustomField>
    <fullName>SignatureContext__c</fullName>
    <label>SignatureContext</label>
    <length>150</length>
    <type>Text</type>
</CustomField>