force-app/main/default/objects/Quote/fields/Staff_Seal__c.field-meta.xml
<CustomField>
    <fullName>Staff_Seal__c</fullName>
    <defaultValue>IF ( $RecordType.DeveloperName = &quot;HHT_JTL&quot; ,   $Label.AP43_CONST_0006   , &quot;&quot;)</defaultValue>
    <label>担当印</label>
    <length>255</length>
    <type>Text</type>
</CustomField>