force-app/main/default/objects/Quote/fields/Staff_Seal_LastName__c.field-meta.xml
<CustomField>
    <fullName>Staff_Seal_LastName__c</fullName>
    <label>担当印(姓)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>