force-app/main/default/objects/Quote/fields/SubtotalMain__c.field-meta.xml
<CustomField>
    <fullName>SubtotalMain__c</fullName>
    <inlineHelpText>Subtotal excluding Options and hidden prices/products</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>QuoteLineItem.Subtotal__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Main</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>