force-app/main/default/objects/Quote/fields/TotalCustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalCustomerPrice__c</fullName>
    <label>Total Customer Price</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Hidden Price, Hidden, Option</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>