force-app/main/default/objects/Quote/fields/TotalCustomerPriceFromOpp__c.field-meta.xml
<CustomField>
    <fullName>TotalCustomerPriceFromOpp__c</fullName>
    <formula>Opportunity.TotalCustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Opportunity Products&apos; Total Price (including given Discount). Excluding Products marked as Hidden or Option.</inlineHelpText>
    <label>Total Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>