force-app/main/default/objects/Quote/fields/TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscount__c</fullName>
    <formula>(TotalListPrice__c - TotalCustomerPrice__c ) / TotalListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>