force-app/main/default/objects/Quote/fields/TotalListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalListPrice__c</fullName>
    <inlineHelpText>Sum of the Opportunity Products&apos; List Price. Excluding Products marked as Option.</inlineHelpText>
    <label>Total List Price</label>
    <summarizedField>QuoteLineItem.ListPriceTotal__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>