force-app/main/default/objects/Quote/fields/TotalPriceMain__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceMain__c</fullName>
    <inlineHelpText>Total Price excluding options and hidden prices/products</inlineHelpText>
    <label>Total Price</label>
    <summarizedField>QuoteLineItem.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Hidden Price, Hidden, Option</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>