force-app/main/default/objects/Quote/fields/TotalSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesPrice__c</fullName>
    <label>Total Sales Price</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Option</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>