force-app/main/default/objects/Quote/compactLayouts/COWO_DX_Quote.recordType-meta.xml
<RecordType>
    <fullName>COWO_DX_Quote</fullName>
    <active>true</active>
    <label>DX</label>
</RecordType>