force-app/main/default/objects/Quote/recordTypes/HHT_JTL.recordType-meta.xml
<RecordType>
    <fullName>HHT_JTL</fullName>
    <active>true</active>
    <label>HHT_JTL</label>
</RecordType>