force-app/main/default/objects/Quote/recordTypes/JTL.recordType-meta.xml
<RecordType>
    <fullName>JTL</fullName>
    <active>true</active>
    <label>JTL</label>
</RecordType>