force-app/main/default/objects/Quote/validationRules/ApprovedFalseApprovedOrSentStat.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedFalseApprovedOrSentStat</fullName>
    <active>true</active>
    <description>Approved=False and In Review Process, Approved or Sent Status</description>
    <errorConditionFormula>OR(
AND(Approved__c = FALSE,ISPICKVAL( Status , &apos;Approved&apos;)),
AND(Approved__c = FALSE,ISPICKVAL( Status , &apos;Sent (Customer)&apos;)))</errorConditionFormula>
    <errorMessage>Submit Quote for Approval to change status to &quot;Approved&quot; or &quot;Sent (Customer)&quot;.</errorMessage>
</ValidationRule>