force-app/main/default/objects/Quote/validationRules/CannotChangeApprovedQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeApprovedQuote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(PRIORVALUE(Status),&quot;Approved&quot;),
   NOT(ISPICKVAL(Status, &quot;Sent (Customer)&quot;)),
   NOT(ISCHANGED( IsSyncing ))
  )</errorConditionFormula>
    <errorMessage>You cannot modify approved Quote</errorMessage>
</ValidationRule>