force-app/main/default/objects/Quote/validationRules/CannotChangeSentQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeSentQuote</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status),&quot;Sent (Customer)&quot;)</errorConditionFormula>
    <errorMessage>You cannot modify Quote sent to Customer</errorMessage>
</ValidationRule>