force-app/main/default/objects/Quote/validationRules/checkCompletionFlg.validationRule-meta.xml
<ValidationRule>
    <fullName>checkCompletionFlg</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Opportunity.RecordType.DeveloperName = &apos;HHT_JTL&apos;,
JTLReportExportCheck__c =true, 
$Profile.Name = &apos;JTL&apos;
)</errorConditionFormula>
    <errorMessage>売上計上済みの商談の為、保存できません。</errorMessage>
</ValidationRule>