force-app/main/default/objects/Quote/validationRules/JTL_Recordtypecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>JTL_Recordtypecheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;HHT_JTL&apos;,
RecordType.DeveloperName = &apos;JTL&apos;
),
RecordType.DeveloperName &lt;&gt;  Opportunity.RecordType.DeveloperName 
)</errorConditionFormula>
    <errorMessage>選択するレコードタイプは、商談のレコードタイプと一致させてください</errorMessage>
</ValidationRule>