force-app/main/default/objects/Quote/listViews/All_Partner_Quotes.listView-meta.xml
<ListView>
    <fullName>All_Partner_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>Created_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Partner Quotes</label>
    <sharedTo>
        <allPartnerUsers/>
    </sharedTo>
</ListView>