force-app/main/default/objects/Quote/listViews/AllQuotes.listView-meta.xml
<ListView>
    <fullName>AllQuotes</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>TotalCustomerPriceFromOpp__c</columns>
    <columns>QuoteValidity__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Hitachi Quotes</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>