force-app/main/default/objects/Quote/listViews/JTL_Opportunity_JTLOpport.listView-meta.xml
<ListView>
    <fullName>JTL_Opportunity_JTLOpport</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote.JTL</value>
    </filters>
    <filters>
        <field>QUOTE.ISSYNCING</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>JTL案件</label>
    <language>ja</language>
    <sharedTo>
        <roleAndSubordinatesInternal>JAPAN_TESTING_LABORATORIES</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>UserRole_zairyo_chubu</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>