force-app/main/default/objects/Quote/listViews/View_Quote_Approved_JTL.listView-meta.xml
<ListView>
    <fullName>View_Quote_Approved_JTL</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Mine</filterScope>
    <label>JTL承認済み見積</label>
    <language>ja</language>
    <sharedTo>
        <roleAndSubordinatesInternal>JAPAN_TESTING_LABORATORIES</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>UserRole_zairyo_chubu</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>